--- a/index.css
+++ b/index.css
@@ -1,28 +1,41 @@
 body{
     margin: 0;
-    background-color: aqua;
+    background-color: #0f1515;
 }
 .container .row {
     font-size: xx-large;
     text-align: center;
-    margin-top: 12%;
+    margin-top: 5%;
+}
+
+.container .row h1 {
+    text-align: center;
+    color: crimson;
+}
+.text{
+    color: white;
 }
 #hr{
     font-size: 100px;
+    color: white;
 }
 .container .row #min{
     font-size: 100px;
+    color: white;
 }
 .container .row #sec{
     font-size: 100px;
+    color: white;
 }
 
 .container .row #count{
     font-size: 100px;
+    color: white;
 }
 
 .action{
     text-align: center;
+    margin-top: 20px;
 }
 
 .action #btn-start{
@@ -36,6 +49,7 @@ body{
     font-size: 16px;
     margin: 4px 2px;
     cursor: pointer;
+    border-radius: 50px;
 }
 .action #btn-stop{
     background-color: blue;
@@ -48,6 +62,7 @@ body{
     font-size: 16px;
     margin: 4px 2px;
     cursor: pointer;
+    border-radius: 50px;
 }
 .action #btn-reset{
     background-color: red;
@@ -60,4 +75,5 @@ body{
     font-size: 16px;
     margin: 4px 2px;
     cursor: pointer;
+    border-radius: 50px;
 }
